--- a/src/preprocess.ipynb
+++ b/src/preprocess.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +36,8 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "import time\n",
     "\n",
     "# data1030-student-f19/data1030_project/data/News_Final.csv\n",
     "df = pd.read_csv('../data/News_Final.csv')\n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +70,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# change to unix time\n",
+    "df_time = df['PublishDate']\n",
+    "x = df_time.values\n",
+    "unixTime = [time.mktime(pd.Timestamp(y).timetuple()) for y in x]\n",
+    "df['PublishDate'] = unixTime\n",
+    "\n",
+    "# minmaxscaler\n",
+    "df_time = df[['PublishDate']]\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(df_time)\n",
+    "df_time_maxmin = scaler.transform(df_time)\n",
+    "df['PublishDate'] = df_time_maxmin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_plat = df[['Facebook','GooglePlus','LinkedIn']]\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(df_plat)\n",
+    "df_plat_maxmin = scaler.transform(df_plat)\n",
+    "\n",
+    "platName = [x+str('_pro') for x in ['Facebook','GooglePlus','LinkedIn']]\n",
+    "\n",
+    "for i in range(len(platName)):\n",
+    "    df[platName[i]] = df_plat_maxmin[:,i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -106,66 +149,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         IDLink          PublishDate  SentimentTitle  SentimentHeadline  \\\n",
-      "0       99248.0  2002-04-02 00:00:00        0.000000          -0.053300   \n",
-      "1       10423.0  2008-09-20 00:00:00        0.208333          -0.156386   \n",
-      "2       18828.0  2012-01-28 00:00:00       -0.425210           0.139754   \n",
-      "3       27788.0  2015-03-01 00:06:00        0.000000           0.026064   \n",
-      "4       27789.0  2015-03-01 00:11:00        0.000000           0.141084   \n",
-      "...         ...                  ...             ...                ...   \n",
-      "93234   61851.0  2016-07-07 15:31:05        0.104284           0.044943   \n",
-      "93235   61865.0  2016-07-07 15:31:10        0.072194           0.000000   \n",
-      "93236  104793.0  2016-07-07 15:38:26        0.291667          -0.139754   \n",
-      "93237  104794.0  2016-07-07 15:59:22        0.121534           0.092313   \n",
-      "93238   61870.0  2016-07-07 16:16:11        0.000000           0.054554   \n",
-      "\n",
-      "       Facebook  GooglePlus  LinkedIn  x0_economy  x0_microsoft  x0_obama  \\\n",
-      "0            -1          -1        -1         0.0           0.0       1.0   \n",
-      "1            -1          -1        -1         1.0           0.0       0.0   \n",
-      "2            -1          -1        -1         1.0           0.0       0.0   \n",
-      "3            -1          -1        -1         1.0           0.0       0.0   \n",
-      "4            -1          -1        -1         1.0           0.0       0.0   \n",
-      "...         ...         ...       ...         ...           ...       ...   \n",
-      "93234        -1           3         5         1.0           0.0       0.0   \n",
-      "93235        -1           0         1         1.0           0.0       0.0   \n",
-      "93236         5           1         0         0.0           0.0       0.0   \n",
-      "93237         0           0         0         0.0           0.0       0.0   \n",
-      "93238        -1           1         0         0.0           1.0       0.0   \n",
-      "\n",
-      "       x0_palestine  \n",
-      "0               0.0  \n",
-      "1               0.0  \n",
-      "2               0.0  \n",
-      "3               0.0  \n",
-      "4               0.0  \n",
-      "...             ...  \n",
-      "93234           0.0  \n",
-      "93235           0.0  \n",
-      "93236           1.0  \n",
-      "93237           1.0  \n",
-      "93238           0.0  \n",
-      "\n",
-      "[93239 rows x 11 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(len(enc_label)):\n",
-    "    df[enc_label[i]] = df_topic_ohe[:,i]\n",
-    "df = df.drop(columns=['Topic'])\n",
-    "print(df)"
+    "    df[enc_label[i]] = df_topic_ohe[:,i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# target var.\n",
+    "# if there are two or more -1:\n",
+    "# target = 0\n",
+    "# else, target = the platform with the highest popularity:\n",
+    "# F = 1; G = 2; L = 3\n",
+    "# if the news has been posted on all three platform but all three platforms has zero popularity:\n",
+    "# target = 4\n",
+    "# all the other samples, f = g > l etc.:\n",
+    "# target = 5\n",
+    "\n",
+    "t = []\n",
+    "for i in range(df.shape[0]):\n",
+    "    f = df['Facebook'].values[i]\n",
+    "    g = df['GooglePlus'].values[i]\n",
+    "    l = df['LinkedIn'].values[i]\n",
+    "    if sum([(f == -1), (g == -1), (l == -1)]) > 1:\n",
+    "        t.append(0) # 5745\n",
+    "    elif f > g and f > l:\n",
+    "        t.append(1) # 53721\n",
+    "    elif g > f and g > l:\n",
+    "        t.append(2) # 2297\n",
+    "    elif l > f and l > g:\n",
+    "        t.append(3) # 12105\n",
+    "    elif f == 0 and f == g and g == l:\n",
+    "        t.append(4) # 14875\n",
+    "    else:\n",
+    "        t.append(5) # 4496\n",
+    "df['BestPlat'] = t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IDLink</th>\n",
+       "      <th>Topic</th>\n",
+       "      <th>PublishDate</th>\n",
+       "      <th>SentimentTitle</th>\n",
+       "      <th>SentimentHeadline</th>\n",
+       "      <th>Facebook</th>\n",
+       "      <th>GooglePlus</th>\n",
+       "      <th>LinkedIn</th>\n",
+       "      <th>Facebook_pro</th>\n",
+       "      <th>GooglePlus_pro</th>\n",
+       "      <th>LinkedIn_pro</th>\n",
+       "      <th>x0_economy</th>\n",
+       "      <th>x0_microsoft</th>\n",
+       "      <th>x0_obama</th>\n",
+       "      <th>x0_palestine</th>\n",
+       "      <th>BestPlat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>99248.0</td>\n",
+       "      <td>obama</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.053300</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10423.0</td>\n",
+       "      <td>economy</td>\n",
+       "      <td>0.453492</td>\n",
+       "      <td>0.208333</td>\n",
+       "      <td>-0.156386</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    IDLink    Topic  PublishDate  SentimentTitle  SentimentHeadline  Facebook  \\\n",
+       "0  99248.0    obama     0.000000        0.000000          -0.053300        -1   \n",
+       "1  10423.0  economy     0.453492        0.208333          -0.156386        -1   \n",
+       "\n",
+       "   GooglePlus  LinkedIn  Facebook_pro  GooglePlus_pro  LinkedIn_pro  \\\n",
+       "0          -1        -1           0.0             0.0           0.0   \n",
+       "1          -1        -1           0.0             0.0           0.0   \n",
+       "\n",
+       "   x0_economy  x0_microsoft  x0_obama  x0_palestine  BestPlat  \n",
+       "0         0.0           0.0       1.0           0.0         0  \n",
+       "1         1.0           0.0       0.0           0.0         0  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
