--- a/src/preprocess.ipynb
+++ b/src/preprocess.ipynb
@@ -16,21 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    IDLink                                             Title  \\\n",
-      "0  99248.0  Obama Lays Wreath at Arlington National Cemetery   \n",
-      "1  10423.0       A Look at the Health of the Chinese Economy   \n",
-      "\n",
-      "                                            Headline     Source    Topic  \\\n",
-      "0  Obama Lays Wreath at Arlington National Cemete...  USA TODAY    obama   \n",
-      "1  Tim Haywood, investment director business-unit...  Bloomberg  economy   \n",
-      "\n",
-      "           PublishDate  SentimentTitle  SentimentHeadline  Facebook  \\\n",
-      "0  2002-04-02 00:00:00        0.000000          -0.053300        -1   \n",
-      "1  2008-09-20 00:00:00        0.208333          -0.156386        -1   \n",
-      "\n",
-      "   GooglePlus  LinkedIn  \n",
-      "0          -1        -1  \n",
-      "1          -1        -1  \n"
+      "(93239, 11)\n"
      ]
     }
    ],
@@ -41,7 +27,7 @@
     "\n",
     "# data1030-student-f19/data1030_project/data/News_Final.csv\n",
     "df = pd.read_csv('../data/News_Final.csv')\n",
-    "print(df.head(2))"
+    "print(df.shape)"
    ]
   },
   {
@@ -159,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,112 +181,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>IDLink</th>\n",
-       "      <th>Topic</th>\n",
-       "      <th>PublishDate</th>\n",
-       "      <th>SentimentTitle</th>\n",
-       "      <th>SentimentHeadline</th>\n",
-       "      <th>Facebook</th>\n",
-       "      <th>GooglePlus</th>\n",
-       "      <th>LinkedIn</th>\n",
-       "      <th>Facebook_pro</th>\n",
-       "      <th>GooglePlus_pro</th>\n",
-       "      <th>LinkedIn_pro</th>\n",
-       "      <th>x0_economy</th>\n",
-       "      <th>x0_microsoft</th>\n",
-       "      <th>x0_obama</th>\n",
-       "      <th>x0_palestine</th>\n",
-       "      <th>BestPlat</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>99248.0</td>\n",
-       "      <td>obama</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-0.053300</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10423.0</td>\n",
-       "      <td>economy</td>\n",
-       "      <td>0.453492</td>\n",
-       "      <td>0.208333</td>\n",
-       "      <td>-0.156386</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    IDLink    Topic  PublishDate  SentimentTitle  SentimentHeadline  Facebook  \\\n",
-       "0  99248.0    obama     0.000000        0.000000          -0.053300        -1   \n",
-       "1  10423.0  economy     0.453492        0.208333          -0.156386        -1   \n",
-       "\n",
-       "   GooglePlus  LinkedIn  Facebook_pro  GooglePlus_pro  LinkedIn_pro  \\\n",
-       "0          -1        -1           0.0             0.0           0.0   \n",
-       "1          -1        -1           0.0             0.0           0.0   \n",
-       "\n",
-       "   x0_economy  x0_microsoft  x0_obama  x0_palestine  BestPlat  \n",
-       "0         0.0           0.0       1.0           0.0         0  \n",
-       "1         1.0           0.0       0.0           0.0         0  "
+       "(93239, 16)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(2)"
+    "df.shape"
    ]
   },
   {
